--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,27 @@
     <!-- <img src="images/background.png" id="background-header" /> -->
     <div class="container-fluid">
       <div id="background-header">
-        <img src="images/logo.png" id="header-logo" />
-        <div id="header-text">MANTRA MESSAGING HERE</div>
+        <div id="header-contents">
+          <img src="images/logo.png" id="header-logo" />
+          <div id="header-text">MANTRA MESSAGING HERE</div>
+        </div>
+      </div>
+      <div id="content">
+        <div class="container">
+          <div id="item-top" class="item">
+            <div class="col-content">
+              <div class="section-header">
+                ABOUT &nbsp; <img src="images/logo.png" class="logo-small"/>
+              </div>
+                In dignissim orci quis lorem porta rhoncus.Morbi dictum finibus velit, vel fringilla ligula.In pulvinar tincidunt eros nec viverra. Maecenas diam magna, volutpat in fermentum nec, rutrum sit amet massa. Fusce fermentum bibendum ipsum lacinia faucibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque pulvinar lorem sit amet eros rhoncus vehicula.
+
+                Vestibulum pharetra pulvinar congue. Nam at velit efficitur, tempus mi eget, consequat neque. Proin hendrerit nisl diam, eu auctor lacus blandit vel. Etiam at cursus eros, pretium pellentesque dui. Vestibulum ultrices feugiat enim fringilla maximus. Etiam convallis eros vel laoreet efficitur.
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/about-us.jpg" class="image-medium"/>
+          </div>
+        </div>
       </div>
     </div>
     <!--[if lt IE 10]>
