Include rough version of the listings side menu.

--- a/src/listings.html
+++ b/src/listings.html
@@ -23,13 +23,54 @@
   <body>
     <!-- <img src="images/background.png" id="background-header" /> -->
     <div id="container-listings" class="container-fluid">
+      <img src="images/logo.png" class="logo-upper-left"/>
       <div id="header-listings" class="background-header">
         <div class="background-header">
-          <div id="header-text"><strong>PLAYA</strong> JEFFERSON</div>
+          <div id="header-text-listings"><strong>PLAYA</strong> JEFFERSON</div>
         </div>
       </div>
-      <div id="content">
+      <div id="listings-content">
         <div class="container">
+          <div id="listings-sidebar" class="item">
+            <div class="menu-top">
+              <div class="buttons">
+                <a href="#" class="cool-button">CHECK AVAILABILITY</a>
+                <a href="#" class="cool-button">REQUEST BROCHURE</a>
+              </div>
+            </div>
+            <div class="menu">
+              <h5 class="highlights"><strong>PROPERTY</strong> HIGHLIGHTS</h5>
+              <hr class="light-line">
+              <ul class="bond-list">
+                <li>200,000 SQ FT</li>
+                <hr class="light-line">
+                <li>CENTRAL LOCATION</li>
+                <hr class="light-line">
+                <li>INSPIRING ARCHITECTURE</li>
+                <hr class="light-line">
+                <li>GREEN FRIENDLY</li>
+                <hr class="light-line">
+              </ul>
+              <h5><strong>AMENITIES</strong></h5>
+              <hr class="light-line">
+              <ul class="bond-list">
+                <li>FIBER INTERNET</li>
+                <hr class="light-line">
+                <li>COMMUNAL BIKES</li>
+                <hr class="light-line">
+                <li>OUTDOOR MEETING / DINING</li>
+                <hr class="light-line">
+                <li>VIBRANT LANDSCAPING</li>
+                <hr class="light-line">
+                <li>ONSITE SECURITY</li>
+                <hr class="light-line">
+
+                <li>COMPLIMENTARY CLEANING SERVICE</li>
+              </ul>
+            </div>
+          </div>
+          <div class="item-wider">
+          </div>
         </div>
       </div>
     </div>
