--- a/src/listings.html
+++ b/src/listings.html
@@ -69,6 +69,23 @@
               </ul>
             </div>
           </div>
+          <div id="listings-info">
+            <div class="info-box">
+              <div class="info-text">
+                <h6>CREATIVE OFFICE SPAE AT </br>
+                THE HEART OF SILICON BEACH.</h6>
+                <p>Playa Jefferson is a dynamic office campus located in Playa Vista.
+                The campus features over 200,000 square feet of creative office space, with
+                dramatic and distincitive architecure, substantial experior shared communal
+                space, easy access to both the 90 and the 405 freeways, and is directly across
+                the street from all of the amenitite at Runway Playa Vista.
+                </p>
+              </div>
+              <div class="info-image-gallery">
+                <img src="images/example.jpg" class="gallery-images"/>
+              </div>
+            </div>
+          </div>
           <div class="item-wider">
           </div>
         </div>
