Mostly finish layout for listings page... a lot of cleanup to do still.

--- a/src/listings.html
+++ b/src/listings.html
@@ -24,6 +24,14 @@
     <!-- <img src="images/background.png" id="background-header" /> -->
     <div id="container-listings" class="container-fluid">
       <img src="images/logo.png" class="logo-upper-left"/>
+      <div class="nav-bar-upper-right">
+        <uL class="nav">
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">CASE STUDIES</a></li>
+          <li><a href="#">SERVICES</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </div>
       <div id="header-listings" class="background-header">
         <div class="background-header">
           <div id="header-text-listings"><strong>PLAYA</strong> JEFFERSON</div>
@@ -31,7 +39,7 @@
       </div>
       <div id="listings-content">
         <div class="container">
-          <div id="listings-sidebar" class="item">
+          <div id="listings-sidebar" class="item cleafix">
             <div class="menu-top">
               <div class="buttons">
                 <a href="#" class="cool-button">CHECK AVAILABILITY</a>
@@ -69,7 +77,7 @@
               </ul>
             </div>
           </div>
-          <div id="listings-info">
+          <div id="listings-info" class="clearfix">
             <div class="info-box">
               <div class="info-text">
                 <h6>CREATIVE OFFICE SPAE AT </br>
@@ -84,6 +92,16 @@
               <div class="info-image-gallery">
                 <img src="images/example.jpg" class="gallery-images"/>
               </div>
+            </div>
+            <div class="info-box">
+              <h5 class="title">LOCATION</h5>
+              <br />
+                <img src="images/fake-map.jpg" class="item-wider"/>
+            </div>
+            <div class="info-box">
+              <h5 class="title">FLOORPLAN</h5>
+              <br />
+                <img src="images/fake-plans.jpg" class="item-wider"/>
             </div>
           </div>
           <div class="item-wider">
