--- a/src/listings.html
+++ b/src/listings.html
@@ -5,6 +5,7 @@
     <title>ground-source</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -47,31 +48,31 @@
               </div>
             </div>
             <div class="menu">
-              <h5 class="highlights"><strong>PROPERTY</strong> HIGHLIGHTS</h5>
-              <hr class="light-line">
+              <h5 class="sidebar-header"><strong>PROPERTY</strong> HIGHLIGHTS</h5>
+              <hr class ="light-line">
               <ul class="bond-list">
                 <li>200,000 SQ FT</li>
-                <hr class="light-line">
+                <hr>
                 <li>CENTRAL LOCATION</li>
-                <hr class="light-line">
+                <hr>
                 <li>INSPIRING ARCHITECTURE</li>
-                <hr class="light-line">
+                <hr>
                 <li>GREEN FRIENDLY</li>
-                <hr class="light-line">
+                <hr>
               </ul>
-              <h5><strong>AMENITIES</strong></h5>
+              <h5 class="sidebar-header"><strong>AMENITIES</strong></h5>
               <hr class="light-line">
               <ul class="bond-list">
                 <li>FIBER INTERNET</li>
-                <hr class="light-line">
+                <hr>
                 <li>COMMUNAL BIKES</li>
-                <hr class="light-line">
+                <hr>
                 <li>OUTDOOR MEETING / DINING</li>
-                <hr class="light-line">
+                <hr>
                 <li>VIBRANT LANDSCAPING</li>
-                <hr class="light-line">
+                <hr>
                 <li>ONSITE SECURITY</li>
-                <hr class="light-line">
+                <hr>
 
                 <li>COMPLIMENTARY CLEANING SERVICE</li>
               </ul>
@@ -80,8 +81,8 @@
           <div id="listings-info" class="clearfix">
             <div class="info-box">
               <div class="info-text">
-                <h6>CREATIVE OFFICE SPAE AT </br>
-                THE HEART OF SILICON BEACH.</h6>
+                <h4 class="title"><strong>CREATIVE OFFICE SPACE AT</strong></br>
+                THE HEART OF SILICON BEACH.</h4>
                 <p>Playa Jefferson is a dynamic office campus located in Playa Vista.
                 The campus features over 200,000 square feet of creative office space, with
                 dramatic and distincitive architecure, substantial experior shared communal
