Style cleanup after initial review with Matt... including..properly positioning header with a css gradient, and removing fixed widths from flebox elements on listings page.

--- a/src/listings.html
+++ b/src/listings.html
@@ -25,22 +25,17 @@
     <!-- <img src="images/background.png" id="background-header" /> -->
     <div id="container-listings" class="container-fluid">
       <img src="images/logo.png" class="logo-upper-left"/>
-      <div class="nav-bar-upper-right">
-        <uL class="nav">
-          <li><a href="#">ABOUT</a></li>
-          <li><a href="#">CASE STUDIES</a></li>
-          <li><a href="#">SERVICES</a></li>
-          <li><a href="#">CONTACT</a></li>
-        </ul>
-      </div>
-      <div id="header-listings" class="background-header">
-        <div class="background-header">
-          <div id="header-text-listings"><strong>PLAYA</strong> JEFFERSON</div>
-        </div>
-      </div>
+      <ul class="nav">
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">CASE STUDIES</a></li>
+        <li><a href="#">SERVICES</a></li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
+      <div id="header-listings" class="background-header"></div>
       <div id="listings-content">
+        <div id="header-text-listings"><strong>PLAYA</strong> JEFFERSON</div>
         <div class="container">
-          <div id="listings-sidebar" class="item cleafix">
+          <div id="listings-sidebar">
             <div class="menu-top">
               <div class="buttons">
                 <a href="#" class="cool-button">CHECK AVAILABILITY</a>
@@ -78,7 +73,7 @@
               </ul>
             </div>
           </div>
-          <div id="listings-info" class="clearfix">
+          <div id="listings-info">
             <div class="info-box">
               <div class="info-text">
                 <h4 class="title"><strong>CREATIVE OFFICE SPACE AT</strong></br>
@@ -97,15 +92,13 @@
             <div class="info-box">
               <h5 class="title">LOCATION</h5>
               <br />
-                <img src="images/fake-map.jpg" class="item-wider"/>
+                <img src="images/fake-map.jpg" class="img-responsive" />
             </div>
             <div class="info-box">
               <h5 class="title">FLOORPLAN</h5>
               <br />
-                <img src="images/fake-plans.jpg" class="item-wider"/>
+                <img src="images/fake-plans.jpg" class="img-responsive" />
             </div>
-          </div>
-          <div class="item-wider">
           </div>
         </div>
       </div>
