Fix sizing and placement of check availability and brochure buttons. Properly align photo gallery.

--- a/src/listings.html
+++ b/src/listings.html
@@ -86,7 +86,7 @@
                 </p>
               </div>
               <div class="info-image-gallery">
-                <img src="images/example.jpg" class="gallery-images"/>
+                <img src="images/example.jpg" class="img-responsive"/>
               </div>
             </div>
             <div class="info-box">
