--- a/src/listings.html
+++ b/src/listings.html
@@ -87,6 +87,10 @@
               </div>
               <div class="info-image-gallery">
                 <img src="images/example.jpg" class="img-responsive"/>
+                <div class="gallery-controls">
+                  <img id="gallery-arrow-left" src="images/listings-arrow-lft.png" />
+                  <img id="gallery-arrow-right" src="images/listings-arrow-rt.png" />
+                </div>
               </div>
             </div>
             <div class="info-box">
