make the gallery icons actual links

--- a/src/listings.html
+++ b/src/listings.html
@@ -88,8 +88,8 @@
               <div class="info-image-gallery">
                 <img src="images/example.jpg" class="img-responsive"/>
                 <div class="gallery-controls">
-                  <img id="gallery-arrow-left" src="images/listings-arrow-lft.png" />
-                  <img id="gallery-arrow-right" src="images/listings-arrow-rt.png" />
+                  <a href="#"><img id="gallery-arrow-left" src="images/listings-arrow-lft.png" /></a>
+                  <a href="#"><img id="gallery-arrow-right" src="images/listings-arrow-rt.png" /></a>
                 </div>
               </div>
             </div>
