Increase padding on sidebar

--- a/src/listings.html
+++ b/src/listings.html
@@ -43,7 +43,7 @@
               </div>
             </div>
             <div class="menu">
-              <h5 class="sidebar-header"><strong>PROPERTY</strong> HIGHLIGHTS</h5>
+              <h2 class="sidebar-header"><span class="subdued"><strong>PROPERTY</strong> HIGHLIGHTS</span></h2>
               <hr class ="light-line">
               <ul class="bond-list">
                 <li>200,000 SQ FT</li>
@@ -55,7 +55,7 @@
                 <li>GREEN FRIENDLY</li>
                 <hr>
               </ul>
-              <h5 class="sidebar-header"><strong>AMENITIES</strong></h5>
+              <h2 class="sidebar-header"><strong>AMENITIES</strong></h2>
               <hr class="light-line">
               <ul class="bond-list">
                 <li>FIBER INTERNET</li>
