--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>ground-source</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
