--- a/src/listings.html
+++ b/src/listings.html
@@ -88,12 +88,12 @@
               </div>
             </div>
             <div class="info-box">
-              <h5 class="title">LOCATION</h5>
+              <h2 class="title subdued">LOCATION</h2>
               <br />
                 <img src="images/fake-map.jpg" class="img-responsive" />
             </div>
             <div class="info-box">
-              <h5 class="title">FLOORPLAN</h5>
+              <h2 class="title subdoed">FLOORPLAN</h2>
               <br />
                 <img src="images/fake-plans.jpg" class="img-responsive" />
             </div>
