--- a/src/listings.html
+++ b/src/listings.html
@@ -97,6 +97,45 @@
         </div>
       </div>
     </div>
+    <div id="footer">
+      <div class="column">
+        <div class="title">SEARCH</div>
+        <a href="#">Properties For Sale</a>
+        <a href="#">Properties For Lease</a>
+        <a href="#">Find a Broker</a>
+      </div>
+      <div class="column">
+        <div class="title">PRODUCTS &amp; SERVICES</div>
+        <a href="#">Product Overview</a>
+        <a href="#">Premium Lister</a>
+        <a href="#">Premium Searcher</a>
+      </div>
+      <div class="column">
+        <div class="title">RESOURCES</div>
+        <a href="#">Help</a>
+        <a href="#">Contact Us</a>
+        <a href="#">Add Listing</a>
+        <a href="#">Market Trends</a>
+      </div>
+      <div class="column">
+        <div class="title">COMPANY</div>
+        <a href="#">About Us</a>
+        <a href="#">LoopNet Blog</a>
+        <a href="#">Terms of Use</a>
+        <a href="#">Privacy Policy</a>
+      </div>
+      <div class="column social">
+        <a href="#" target="_blank">
+          <img src="images/social/i.svg"/>
+        </a>
+        <a href="#" target="_blank">
+          <img src="images/social/t.svg"/>
+        </a>
+        <a href="#" target="_blank">
+          <img src="images/social/f.svg"/>
+        </a>
+      </div>
+    </div>
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
