Minor styling tweaks

--- a/src/listings.html
+++ b/src/listings.html
@@ -70,8 +70,10 @@
           <div id="listings-info">
             <div class="info-box">
               <div class="info-text">
-                <h4 class="title"><strong>CREATIVE OFFICE SPACE AT</strong></br>
-                THE HEART OF SILICON BEACH.</h4>
+                <h2 class="title">
+                  <strong>CREATIVE OFFICE SPACE AT</strong></br>
+                  THE HEART OF SILICON BEACH.
+                </h2>
                 <p>Playa Jefferson is a dynamic office campus located in Playa Vista.
                 The campus features over 200,000 square feet of creative office space, with
                 dramatic and distincitive architecure, substantial experior shared communal
@@ -82,8 +84,8 @@
               <div class="info-image-gallery">
                 <img src="images/example.jpg" class="img-responsive"/>
                 <div class="gallery-controls">
-                  <a href="#"><img id="gallery-arrow-left" src="images/listings-arrow-lft.png" /></a>
-                  <a href="#"><img id="gallery-arrow-right" src="images/listings-arrow-rt.png" /></a>
+                  <img id="gallery-arrow-left" src="images/listings-arrow-lft.png" />
+                  <img id="gallery-arrow-right" src="images/listings-arrow-rt.png" />
                 </div>
               </div>
             </div>
