--- a/src/about.html
+++ b/src/about.html
@@ -25,12 +25,20 @@
     <!-- <img src="images/background.png" id="background-header" /> -->
     <div id="container-about" class="container-fluid">
       <img src="images/logo.png" class="logo-upper-left"/>
-      <ul class="nav">
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">CASE STUDIES</a></li>
-        <li><a href="#">SERVICES</a></li>
-        <li><a href="#">CONTACT</a></li>
-      </ul>
+      <div class="ham-menu"></div>
+      <div class="nav-modal">
+        <div class="inner">
+          <img src="images/logo.png" class="modal-logo"/>
+          <div class="menu-close"></div>
+          <ul class="nav">
+            <li><a href="#">HOME</a></li>
+            <li><a class="active" href="#">ABOUT</a></li>
+            <li><a href="#">LISTINGS</a></li>
+            <li><a href="#">PROJECTS</a></li>
+            <li><a href="#">CONTACT</a></li>
+          </ul>
+        </div>
+      </div>
       <div id="header-about">
         <img class="image-left" src="images/about/hero.jpg" /><!--
      --><div class="description">
@@ -164,6 +172,14 @@
         </a>
       </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.ham-menu, .menu-close').click(function(){
+          $('.nav-modal').fadeToggle();
+        });
+    });
+    </script>
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
