Slight revamping on modal

--- a/src/about.html
+++ b/src/about.html
@@ -31,9 +31,9 @@
           <img src="images/logo.png" class="modal-logo"/>
           <div class="menu-close"></div>
           <ul class="nav">
-            <li><a href="#">HOME</a></li>
-            <li><a class="active" href="#">ABOUT</a></li>
-            <li><a href="#">LISTINGS</a></li>
+            <li><a href="/">HOME</a></li>
+            <li><a class="active" href="/about.html">ABOUT</a></li>
+            <li><a href="/listings.html">LISTINGS</a></li>
             <li><a href="#">PROJECTS</a></li>
             <li><a href="#">CONTACT</a></li>
           </ul>
@@ -180,9 +180,6 @@
         });
     });
     </script>
-    <!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
