--- a/src/listings.html
+++ b/src/listings.html
@@ -25,6 +25,20 @@
     <!-- <img src="images/background.png" id="background-header" /> -->
     <div id="container-listings" class="container-fluid">
       <img src="images/logo.png" class="logo-upper-left"/>
+      <div class="ham-menu"></div>
+      <div class="nav-modal">
+        <div class="inner">
+          <img src="images/logo.png" class="modal-logo"/>
+          <div class="menu-close"></div>
+          <ul class="nav">
+            <li><a href="/">HOME</a></li>
+            <li><a href="/about.html">ABOUT</a></li>
+            <li><a class="active" href="/listings.html">LISTINGS</a></li>
+            <li><a href="#">PROJECTS</a></li>
+            <li><a href="#">CONTACT</a></li>
+          </ul>
+        </div>
+      </div>
       <div id="header-listings" class="background-header"></div>
       <div id="listings-content">
         <div id="header-text-listings"><strong>PLAYA</strong> JEFFERSON</div>
@@ -138,9 +152,16 @@
         </a>
       </div>
     </div>
-    <!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.ham-menu, .menu-close').click(function(){
+          $('.nav-modal').fadeToggle();
+        });
+    });
+    </script>
+
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
