--- a/src/index.html
+++ b/src/index.html
@@ -29,15 +29,19 @@
     });</script>
   </head>
   <body class="body-2 index-page-temp">
-    <div class="navbar-2 w-nav" data-animation="default" data-collapse="all" data-duration="400">
-        <div class="w-container">
-        <div class="menu-button-2 w-nav-button">
-            <div class="top-line"></div>
-            <div class="middle-1-line"></div>
-            <div class="middle-bottom-line"></div>
-            <div class="bottom-line"></div>
-        </div>
-        </div>
+    <div class="ham-menu"></div>
+    <div class="nav-modal">
+      <div class="inner">
+        <img src="images/logo.png" class="modal-logo"/>
+        <div class="menu-close"></div>
+        <ul class="nav">
+          <li><a class="active" href="/">HOME</a></li>
+          <li><a href="/about.html">ABOUT</a></li>
+          <li><a href="/listings.html">LISTINGS</a></li>
+          <li><a href="#">PROJECTS</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </div>
     </div>
     <div class="section"><img class="image-4" sizes="(max-width: 479px) 100vw, (max-width: 767px) 208px, 358px" src="images/home-temp/groundsource_logo.png" srcset="images/home-temp/groundsource_logo-p-500.png 500w, images/home-temp/groundsource_logo-p-800.png 800w, images/home-temp/groundsource_logo-p-1080.png 1080w, images/home-temp/groundsource_logo.png 1148w"><img class="header-image" sizes="100vw" src="images/home-temp/groundsource_header-2200-3.jpg" srcset="images/home-temp/groundsource_header-2200-3-p-500.jpeg 500w, images/home-temp/groundsource_header-2200-3-p-1080.jpeg 1080w, images/home-temp/groundsource_header-2200-3-p-1600.jpeg 1600w, images/home-temp/groundsource_header-2200-3-p-2000.jpeg 2000w, images/home-temp/groundsource_header-2200-3-p-2600.jpeg 2600w, images/home-temp/groundsource_header-2200-3.jpg 3120w" width="1560">
         <div class="text-block-4">LOCAL BY CHOICE, NOT BY CHANCE.</div><img class="image-5" src="images/home-temp/scroll-arrow.png"></div>
@@ -132,6 +136,13 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.ham-menu, .menu-close').click(function(){
+          $('.nav-modal').fadeToggle();
+        });
+    });
+    </script>
     <script src="js/skyref.js" type="text/javascript"></script>
     <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 
