--- a/src/about.html
+++ b/src/about.html
@@ -39,28 +39,66 @@
         </div>
     </div>
     <div id="about-content">
-      <!-- <div class="container"> -->
-        <div id="header-about" class="container">
-          <div class="header-image">
-            <img class="image-left" src="images/about/hero.jpg" />
+      <div id="header-about" class="container">
+        <div class="header-image">
+          <img class="image-left" src="images/about/hero.jpg" />
+        </div>
+        <div class="description">
+          <div class="title head-title">ABOUT <span>GROUND</span>SOURCE</div>
+          <div class="top head-subtitle">In dignissim orci quis lorem porta rhoncus.</div>
+          <div class="bottom head-subtitle">Morbi dictum finibus velit, vel fringilla volutpat.</div>
+          <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+            vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+            no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            <br><br>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+            vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+            no sea takimata sanctus est Lorem ipsum dolor sit amet.
+          </p>
+        </div>
+      </div>
+      <div class="agents container">
+        <div class="agent">
+          <div class="bio-image">
+            <img src="images/about/agent-01.jpg"/>
+            <div class="image-title"><span>JONATHAN</span> DOE</div>
           </div>
-          <div class="description">
-            <div class="title head-title">ABOUT <span>GROUND</span>SOURCE</div>
-            <div class="top head-subtitle">In dignissim orci quis lorem porta rhoncus.</div>
-            <div class="bottom head-subtitle">Morbi dictum finibus velit, vel fringilla volutpat.</div>
-            <p>
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-              tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-              vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-              no sea takimata sanctus est Lorem ipsum dolor sit amet.
-              <br><br>
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-              tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-              vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-              no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            </p>
+          <div class="short-bio">
+            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
           </div>
-        <!-- </div> -->
+          <div class="bio-button">VIEW FULL BIO</div>
+          <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
+        </div>
+
+        <div class="agent">
+          <div class="bio-image">
+            <img src="images/about/agent-02.jpg"/>
+            <div class="image-title"><span>JANE</span> DOE</div>
+          </div>
+          <div class="short-bio">
+            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+          </div>
+          <div class="bio-button">VIEW FULL BIO</div>
+          <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
+        </div>
+
+        <div class="agent">
+          <div class="bio-image">
+            <img src="images/about/agent-03.jpg"/>
+            <div class="image-title"><span>JONATHAN</span> DOE</div>
+          </div>
+          <div class="short-bio">
+            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+          </div>
+          <div class="bio-button">VIEW FULL BIO</div>
+          <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
+        </div>
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
