--- a/src/about.html
+++ b/src/about.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <div id="container-about" class="container-fluid">
+      <div class="box">
       <img src="images/logo.png" class="logo-upper-left"/>
       <div class="ham-menu"></div>
       <div class="nav-modal">
@@ -37,8 +38,9 @@
             <li><a href="#">CONTACT</a></li>
           </ul>
         </div>
+      </div>
     </div>
-    <div id="about-content">
+    <div>
       <div id="header-about" class="container">
         <div class="header-image">
           <img class="image-left" src="images/about/hero.jpg" />
@@ -60,45 +62,75 @@
           </p>
         </div>
       </div>
-      <div class="agents container">
-        <div class="agent">
-          <div class="bio-image">
-            <img src="images/about/agent-01.jpg"/>
-            <div class="image-title"><span>JONATHAN</span> DOE</div>
+      <div class="agents">
+        <div class="container">
+          <div class="agent">
+            <div class="bio-image">
+              <img src="images/about/agent-01.jpg"/>
+              <div class="image-title"><span>JONATHAN</span> DOE</div>
+            </div>
+            <div class="short-bio">
+              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            </div>
+            <div class="bio-button">VIEW FULL BIO</div>
+            <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
           </div>
-          <div class="short-bio">
-            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-          </div>
-          <div class="bio-button">VIEW FULL BIO</div>
-          <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
-        </div>
 
-        <div class="agent">
-          <div class="bio-image">
-            <img src="images/about/agent-02.jpg"/>
-            <div class="image-title"><span>JANE</span> DOE</div>
+          <div class="agent">
+            <div class="bio-image">
+              <img src="images/about/agent-02.jpg"/>
+              <div class="image-title"><span>JANE</span> DOE</div>
+            </div>
+            <div class="short-bio">
+              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            </div>
+            <div class="bio-button">VIEW FULL BIO</div>
+            <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
           </div>
-          <div class="short-bio">
-            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-          </div>
-          <div class="bio-button">VIEW FULL BIO</div>
-          <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
-        </div>
 
-        <div class="agent">
-          <div class="bio-image">
-            <img src="images/about/agent-03.jpg"/>
-            <div class="image-title"><span>JONATHAN</span> DOE</div>
+          <div class="agent">
+            <div class="bio-image">
+              <img src="images/about/agent-03.jpg"/>
+              <div class="image-title"><span>JONATHAN</span> DOE</div>
+            </div>
+            <div class="short-bio">
+              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            </div>
+            <div class="bio-button">VIEW FULL BIO</div>
+            <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
           </div>
-          <div class="short-bio">
-            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-          </div>
-          <div class="bio-button">VIEW FULL BIO</div>
-          <div class="bio-contact">agent@groundsource.com<br>M:310.333.3333</div>
         </div>
+      </div>
+    </div>
+    <div id="about-content">
+      <div class="section-header">
+        <div class="title">LOREM IPSUM DOLOR SIT AMET, CONSECTETUR</div>
+        <div class="subtitle">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+        </div>
+      </div>
+      <div class="section-content container">
+        <div class="description">
+          Groundsource specializes in various areas throughout the greater Los Angeles areas including but not limited to:
+          <ul>
+            <li>Playa Vista</li>
+            <li>Marina Del Rey</li>
+            <li>Park West</li>
+            <li>Culver City</li>
+            <li>Venice</li>
+            <li>Santa Monica</li>
+            <li>Westwood</li>
+            <li>Beverly Hills</li>
+            <li>and many more</li>
+          </ul>
+        </div>
+        <div class="gmap-container">
+          <img class="gmap" src="images/about/gmap.jpg" />
+        </div>
+      </div>
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
