--- a/src/about.html
+++ b/src/about.html
@@ -170,5 +170,13 @@
         </div>
       </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.ham-menu, .menu-close').click(function(){
+          $('.nav-modal').fadeToggle();
+        });
+    });
+    </script>
   </body>
 </html>
