Make the ham menu smaller in single-column view. Only show text `About` on smaller screens.

--- a/src/about.html
+++ b/src/about.html
@@ -44,7 +44,7 @@
             <img class="image-left" src="images/about/hero.jpg" />
           </div>
           <div class="description">
-            <div class="title head-title">ABOUT <span>GROUND</span>SOURCE</div>
+            <div class="title head-title">ABOUT <span class="small-hidden">GROUND</span><span class="small-hidden">SOURCE</span></div>
             <div class="top head-subtitle">In dignissim orci quis lorem porta rhoncus.</div>
             <div class="bottom head-subtitle">Morbi dictum finibus velit, vel fringilla volutpat.</div>
             <p>
