Begin working on the home page, and put header in place.

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,6 @@
     <!-- css files will be automatically insert here -->
     <!-- endinject -->
     <!-- endbuild -->
-
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
     <script type="text/javascript">WebFont.load({
     google: {
@@ -28,110 +27,26 @@
     }
     });</script>
   </head>
-  <body class="body-2 index-page-temp">
+  <body>
     <div class="ham-menu"></div>
     <div class="nav-modal">
       <div class="inner">
         <img src="images/logo.png" class="modal-logo"/>
         <div class="menu-close"></div>
         <ul class="nav">
-          <li><a class="active" href="/">HOME</a></li>
-          <li><a href="/about.html">ABOUT</a></li>
+          <li><a href="/">HOME</a></li>
+          <li><a class="active" href="/about.html">ABOUT</a></li>
           <li><a href="/listings.html">LISTINGS</a></li>
           <li><a href="#">PROJECTS</a></li>
           <li><a href="#">CONTACT</a></li>
         </ul>
       </div>
     </div>
-    <div class="section"><img class="image-4" sizes="(max-width: 479px) 100vw, (max-width: 767px) 208px, 358px" src="images/home-temp/groundsource_logo.png" srcset="images/home-temp/groundsource_logo-p-500.png 500w, images/home-temp/groundsource_logo-p-800.png 800w, images/home-temp/groundsource_logo-p-1080.png 1080w, images/home-temp/groundsource_logo.png 1148w"><img class="header-image" sizes="100vw" src="images/home-temp/groundsource_header-2200-3.jpg" srcset="images/home-temp/groundsource_header-2200-3-p-500.jpeg 500w, images/home-temp/groundsource_header-2200-3-p-1080.jpeg 1080w, images/home-temp/groundsource_header-2200-3-p-1600.jpeg 1600w, images/home-temp/groundsource_header-2200-3-p-2000.jpeg 2000w, images/home-temp/groundsource_header-2200-3-p-2600.jpeg 2600w, images/home-temp/groundsource_header-2200-3.jpg 3120w" width="1560">
-        <div class="text-block-4">LOCAL BY CHOICE, NOT BY CHANCE.</div><img class="image-5" src="images/home-temp/scroll-arrow.png"></div>
-    <div class="section-2"><img class="image-6" sizes="100vw" src="images/home-temp/about-us-block.png" srcset="images/home-temp/about-us-block-p-500.png 500w, images/home-temp/about-us-block-p-800.png 800w, images/home-temp/about-us-block-p-1080.png 1080w, images/home-temp/about-us-block-p-1600.png 1600w, images/home-temp/about-us-block-p-2000.png 2000w, images/home-temp/about-us-block-p-2600.png 2600w, images/home-temp/about-us-block.png 3120w" width="1560"><img class="image-52" height="490" sizes="(max-width: 720px) 100vw, (max-width: 767px) 720px, 100vw" src="images/home-temp/mobile-about-img.png" srcset="images/home-temp/mobile-about-img-p-500.png 500w, images/home-temp/mobile-about-img.png 720w">
-        <div class="about-content-container">
-        <div class="div-block-18 w-clearfix">
-            <div class="text-block-6">ABOUT</div><img class="image-7" sizes="(max-width: 479px) 18vw, (max-width: 991px) 190px, 230px" src="images/home-temp/groundsource_logo.png" srcset="images/home-temp/groundsource_logo-p-500.png 500w, images/home-temp/groundsource_logo-p-800.png 800w, images/home-temp/groundsource_logo-p-1080.png 1080w, images/home-temp/groundsource_logo.png 1148w"></div>
-        <div class="div-block-16">
-            <div class="text-block-9">GROUNDSOURCE is a Los Angeles-based full-service real estate firm that specializes in representing tenants, landlords and investors. Our forty-five years of collective experience in the L.A. marketplace lets us combine extensive insider knowledge with trusted partnerships to create unparalleled value. We’re a boutique firm that offers clients the prestigious service they deserve with an intimate, hands-on approach.<br><br>We believe it isn’t just about satisfied clients, it’s about repeat clients. Therefore, we always spend as much time as it takes to close the deal the right way. For us, good business is about a connection, not a commission which is why at GROUNDSOURCE we’re by your side from the fact-finding to the lease signing and every step along the way.</div>
-        </div>
-        </div>
-    </div>
-    <div class="section-3">
-        <h1 class="heading"><strong class="important-text-2">"I work with GROUNDSOURCE because they deliver — the best market insight, the most direct relationships, and, ultimately, the best deal."</strong></h1>
-        <div class="text-block-5">- Seth Phillips Althoff</div>
-    </div>
-    <div class="section-4">
-        <div class="div-block">
-        <div class="div-block-2"><img class="image-13" sizes="(max-width: 479px) 100vw, 491.8125px" src="images/home-temp/Carousel_img_main_bg.jpg" srcset="images/home-temp/Carousel_img_main_bg-p-800.jpeg 800w, images/home-temp/Carousel_img_main_bg-p-1080.jpeg 1080w, images/home-temp/Carousel_img_main_bg-p-1600.jpeg 1600w, images/home-temp/Carousel_img_main_bg-p-2000.jpeg 2000w, images/home-temp/Carousel_img_main_bg.jpg 2022w"><img class="image-21" sizes="200.75px" src="images/home-temp/Main-Card-side-map-1.jpg" srcset="images/home-temp/Main-Card-side-map-1-p-500.jpeg 500w, images/home-temp/Main-Card-side-map-1.jpg 815w"><img class="image-20" src="images/home-temp/carousel_cta.png">
-            <div class="text-block-13">In pulvinar tincidunt eros nec viverra. Maecenas diam magna, volutpat in fermentum nec, rutrum sit amet massa. Fusce fermentum bibendum ipsum lacinia faucibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque pulvinar lorem sit amet eros rhoncus vehicula.</div><img class="image-19" sizes="434.34375px" src="images/home-temp/Main-Card-side-headerimg-1.jpg" srcset="images/home-temp/Main-Card-side-headerimg-1-p-500.jpeg 500w, images/home-temp/Main-Card-side-headerimg-1-p-800.jpeg 800w, images/home-temp/Main-Card-side-headerimg-1-p-1080.jpeg 1080w, images/home-temp/Main-Card-side-headerimg-1-p-1600.jpeg 1600w, images/home-temp/Main-Card-side-headerimg-1.jpg 1873w">
-            <h1 class="heading-6"><strong>1023</strong> GARDEN STREET</h1>
-            <div class="text-block-14">1023 Garden Street<br>Los Angeles, CA 90066</div>
-        </div>
-        <div class="div-block-3"><img class="image-14" sizes="(max-width: 479px) 100vw, 491.796875px" src="images/home-temp/Carousel_img_main_bg.jpg" srcset="images/home-temp/Carousel_img_main_bg-p-800.jpeg 800w, images/home-temp/Carousel_img_main_bg-p-1080.jpeg 1080w, images/home-temp/Carousel_img_main_bg-p-1600.jpeg 1600w, images/home-temp/Carousel_img_main_bg-p-2000.jpeg 2000w, images/home-temp/Carousel_img_main_bg.jpg 2022w"><img class="image-18" src="images/home-temp/carousel_cta.png">
-            <div class="text-block-11">In pulvinar tincidunt eros nec viverra. Maecenas diam magna, volutpat in fermentum nec, rutrum sit amet massa. Fusce fermentum bibendum ipsum lacinia faucibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque pulvinar lorem sit amet eros rhoncus vehicula.</div><img class="image-16" sizes="197.765625px" src="images/home-temp/Main-Card-side-map.jpg" srcset="images/home-temp/Main-Card-side-map-p-500.jpeg 500w, images/home-temp/Main-Card-side-map-p-800.jpeg 800w, images/home-temp/Main-Card-side-map.jpg 815w"><img class="image-15" sizes="440.21875px" src="images/home-temp/Main-Card-side-headerimg.jpg" srcset="images/home-temp/Main-Card-side-headerimg-p-500.jpeg 500w, images/home-temp/Main-Card-side-headerimg-p-800.jpeg 800w, images/home-temp/Main-Card-side-headerimg-p-1080.jpeg 1080w, images/home-temp/Main-Card-side-headerimg-p-1600.jpeg 1600w, images/home-temp/Main-Card-side-headerimg.jpg 1872w">
-            <h1 class="heading-4"><strong>1275</strong> MINNESOTA ROAD</h1>
-            <div class="text-block-12">1275 Minnesota Road<br>Los Angeles, CA 90066</div>
-        </div><a class="link-block-2 w-inline-block" href="#"><img class="image-10" src="images/home-temp/carousel_cta.png"></a><img class="image-9" sizes="(max-width: 479px) 78vw, (max-width: 767px) 40vw, (max-width: 991px) 224px, 254.796875px" src="images/home-temp/map.jpg" srcset="images/home-temp/map-p-500.jpeg 500w, images/home-temp/map-p-800.jpeg 800w, images/home-temp/map.jpg 811w">
-        <div class="text-block-18">12777 W Jefferson Blvd.<br>Los Angeles, CA 90066</div><img class="image-50" sizes="(max-width: 767px) 100vw, (max-width: 991px) 560px, 637px" src="images/home-temp/Carousel_img_main_bg.jpg" srcset="images/home-temp/Carousel_img_main_bg-p-800.jpeg 800w, images/home-temp/Carousel_img_main_bg-p-1080.jpeg 1080w, images/home-temp/Carousel_img_main_bg-p-1600.jpeg 1600w, images/home-temp/Carousel_img_main_bg-p-2000.jpeg 2000w, images/home-temp/Carousel_img_main_bg.jpg 2022w"><img class="image-8" sizes="(max-width: 767px) 100vw, (max-width: 991px) 560px, 637px" src="images/home-temp/Carousel_img_main.jpg" srcset="images/home-temp/Carousel_img_main-p-500.jpeg 500w, images/home-temp/Carousel_img_main-p-800.jpeg 800w, images/home-temp/Carousel_img_main-p-2000.jpeg 2000w, images/home-temp/Carousel_img_main.jpg 2023w"><img class="image-55" src="images/home-temp/slider-arrow-lft.png"><img class="image-56" src="images/home-temp/slider-arrow-rt.png">
-        <h1 class="heading-2"><strong>PLAYA</strong> JEFFERSON</h1>
-        <div class="text-block-10">In pulvinar tincidunt eros nec viverra. Maecenas diam magna, volutpat in fermentum nec, rutrum sit amet massa. Fusce fermentum bibendum ipsum lacinia faucibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque pulvinar lorem sit amet eros rhoncus vehicula.</div><img class="image-11" sizes="(max-width: 479px) 100vw, 365px" src="images/home-temp/carousel_right_arrow.png" srcset="images/home-temp/carousel_right_arrow-p-500.png 500w, images/home-temp/carousel_right_arrow-p-800.png 800w, images/home-temp/carousel_right_arrow.png 900w"><img class="image-17" sizes="(max-width: 479px) 100vw, 365px" src="images/home-temp/carousel_left_arrow.png" srcset="images/home-temp/carousel_left_arrow-p-500.png 500w, images/home-temp/carousel_left_arrow-p-800.png 800w, images/home-temp/carousel_left_arrow.png 968w"></div>
-    </div>
-    <div class="section-5">
-        <div class="our-services__image"></div>
-        <div class="div-block-14">
-        <h1 class="heading-8"><strong>OUR</strong> SERVICES</h1>
-        <div class="div-block-19 w-clearfix">
-            <div class="service-block service-block-darker">
-            <h1 class="service-block-heading"><strong>TENNANT</strong> REPRESENTATION</h1>
-            <div class="service-block-text">Effective tenant representation is based on experience and knowledge and at GROUNDSOURCE we know more about Los Angeles than anyone else -- we know the market conditions, the infrastructures, comparable deals and the people who made them. This is our city.</div><img class="image-24" src="images/home-temp/learnmore_cta.png"></div>
-            <div class="service-block service-block-dark">
-            <h1 class="service-block-heading"><strong>LANDLORD</strong>&nbsp;REPRESENTATION</h1>
-            <div class="service-block-text">We provide efficient, effective landlord representation, ensuring that each transaction is hands-on, locally informed and detail-oriented. We know the value of a broker lies in our transparent integrity and commitment to a seamless experience.</div><img class="image-24" src="images/home-temp/learnmore_cta.png"></div>
-        </div>
-        </div>
-    </div>
-    <div class="section-6">
-        <div class="div-block-10">
-        <h1 class="heading-14"><strong class="important-text-5">CONTACT</strong> US</h1><img class="image-30" src="images/home-temp/IG-icon.png"><img class="image-29" src="images/home-temp/location-icon.png"><img class="image-28" src="images/home-temp/email-icon.png"><img class="image-27" src="images/home-temp/phone-icon.png"><a class="link" href="#">(888) 555-4433</a><a class="link-2" href="#">info@groundsource.com</a><a class="link-3" href="#">1157 Highland Ave, Los Angeles, CA 90038</a><a class="link-4" href="#">@groundsource</a>
-        <div class="div-block-9"></div>
-        </div><img class="image-31" sizes="100vw" src="images/home-temp/Contact-map.jpg" srcset="images/home-temp/Contact-map-p-500.jpeg 500w, images/home-temp/Contact-map-p-800.jpeg 800w, images/home-temp/Contact-map-p-2000.jpeg 2000w, images/home-temp/Contact-map-p-2600.jpeg 2600w, images/home-temp/Contact-map.jpg 3120w" width="1560">
-    </div>
 
-    <div id="footer">
-      <div class="column">
-        <div class="title">SEARCH</div>
-        <a href="#">Properties For Sale</a>
-        <a href="#">Properties For Lease</a>
-        <a href="#">Find a Broker</a>
-      </div>
-      <div class="column">
-        <div class="title">PRODUCTS &amp; SERVICES</div>
-        <a href="#">Product Overview</a>
-        <a href="#">Premium Lister</a>
-        <a href="#">Premium Searcher</a>
-      </div>
-      <div class="column">
-        <div class="title">RESOURCES</div>
-        <a href="#">Help</a>
-        <a href="#">Contact Us</a>
-        <a href="#">Add Listing</a>
-        <a href="#">Market Trends</a>
-      </div>
-      <div class="column">
-        <div class="title">COMPANY</div>
-        <a href="#">About Us</a>
-        <a href="#">LoopNet Blog</a>
-        <a href="#">Terms of Use</a>
-        <a href="#">Privacy Policy</a>
-      </div>
-      <div class="column social">
-        <a href="#" target="_blank">
-          <img src="images/social/i.svg"/>
-        </a>
-        <a href="#" target="_blank">
-          <img src="images/social/t.svg"/>
-        </a>
-        <a href="#" target="_blank">
-          <img src="images/social/f.svg"/>
-        </a>
+    <div id="header-home">
+      <div id="header-content">
+        <img src="images/logo.png" alt=""/>
+        <div id="header-text">LOCAL BY CHOICE, NOT BY CHANCE</div>
       </div>
     </div>
 
@@ -143,24 +58,4 @@
         });
     });
     </script>
-    <script src="js/skyref.js" type="text/javascript"></script>
-    <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-
-    <!-- build:js(src) scripts/vendor.js -->
-    <!-- bower:js -->
-    <!-- run `gulp inject` to automatically populate bower script dependencies -->
-    <!-- endbower -->
-    <!-- endbuild -->
-
-    <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
-    <!-- inject:js -->
-    <!-- js files will be automatically insert here -->
-    <!-- endinject -->
-
-    <!-- inject:partials -->
-    <!-- angular templates will be automatically converted in js and inserted here -->
-    <!-- endinject -->
-    <!-- endbuild -->
-
   </body>
-</html>
