Set top-level content for home page.

--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,24 @@
 
     <div id="header-home">
       <div id="header-content">
-        <img src="images/logo.png" alt=""/>
+        <img id="header-logo" src="images/logo.png" alt=""/>
         <div id="header-text">LOCAL BY CHOICE, NOT BY CHANCE</div>
+        <img src="images/scroll-arrow.png" class="scroll-arrow"/>
+      </div>
+    </div>
+    <div class="content">
+      <div class="container">
+        <div class="col-45 header-overlap">
+            <div class="section-header">
+              ABOUT &nbsp; <img src="images/logo.png" class="logo-small"/>
+            </div>
+            In dignissim orci quis lorem porta rhoncus.Morbi dictum finibus velit, vel fringilla ligula.In pulvinar tincidunt eros nec viverra. Maecenas diam magna, volutpat in fermentum nec, rutrum sit amet massa. Fusce fermentum bibendum ipsum lacinia faucibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque pulvinar lorem sit amet eros rhoncus vehicula.
+
+            Vestibulum pharetra pulvinar congue. Nam at velit efficitur, tempus mi eget, consequat neque. Proin hendrerit nisl diam, eu auctor lacus blandit vel. Etiam at cursus eros, pretium pellentesque dui. Vestibulum ultrices feugiat enim fringilla maximus. Etiam convallis eros vel laoreet efficitur.
+        </div>
+        <div class="col-45">
+          <img src="images/about-us.jpg" class="image-medium"/>
+        </div>
       </div>
     </div>
 
