Rename container div to flexbox (for clarity). Begin setting up property carousel/preview markup.. this will most likely need to become a component in the future.

--- a/src/about.html
+++ b/src/about.html
@@ -39,7 +39,7 @@
     </div>
     <div id="container-about">
       <div id="header-about">
-        <div class="container">
+        <div class="flexbox">
           <div class="header-image">
             <img class="image-left" src="images/about/hero.jpg" />
           </div>
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="agents">
-        <div class="container">
+        <div class="flexbox">
           <div class="agent">
             <div class="bio-image">
               <img src="images/about/agent-01.jpg"/>
