--- a/src/index.html
+++ b/src/index.html
@@ -51,17 +51,70 @@
       </div>
     </div>
     <div class="content">
-      <div class="container">
-        <div class="col-45 header-overlap">
-            <div class="section-header">
-              ABOUT &nbsp; <img src="images/logo.png" class="logo-small"/>
+      <div class="flexbox">
+        <div class="col-medium header-overlap">
+            <div class="padding-80">
+                <div class="section-header">
+                  ABOUT &nbsp; <img src="images/logo.png" class="logo-small"/>
+                </div>
+                <p>
+                  GROUNDSOURCE is a Los Angeles-based full-service real estate firm that specializes in representing tenants, landlords and investors. Our forty-five years of collective experience in the L.A. marketplace lets us combine extensive insider knowledge with trusted partnerships to create unparalleled value. We’re a boutique firm that offers clients the prestigious service they deserve with an intimate, hands-on approach.
+                  We believe it isn’t just about satisfied clients, it’s about repeat clients. Therefore, we always spend as much time as it takes to close the deal the right way. For us, good business is about a connection, not a commission which is why at GROUNDSOURCE we’re by your side from the fact-finding to the lease signing and every step along the way.
+                </p>
             </div>
-            In dignissim orci quis lorem porta rhoncus.Morbi dictum finibus velit, vel fringilla ligula.In pulvinar tincidunt eros nec viverra. Maecenas diam magna, volutpat in fermentum nec, rutrum sit amet massa. Fusce fermentum bibendum ipsum lacinia faucibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque pulvinar lorem sit amet eros rhoncus vehicula.
-
-            Vestibulum pharetra pulvinar congue. Nam at velit efficitur, tempus mi eget, consequat neque. Proin hendrerit nisl diam, eu auctor lacus blandit vel. Etiam at cursus eros, pretium pellentesque dui. Vestibulum ultrices feugiat enim fringilla maximus. Etiam convallis eros vel laoreet efficitur.
         </div>
-        <div class="col-45">
+        <div class="col-medium">
           <img src="images/about-us.jpg" class="image-medium"/>
+        </div>
+      </div>
+      <div class="horizontal-break">
+        <p><strong>
+          "I work with GROUNDSOURCE because they deliver — the best market insight, the most direct relationships, and, ultimately, the best deal."
+        </strong></p>
+        <p>- Seth Phillips Althoff</p>
+      </div>
+      <div class="property-slideshow">
+        <div class="flexbox">
+          <div id="property-preview-1" class="property-preview">
+            <img src="images/carousel/prop1-header.jpg" class="preview-header"/>
+            <div class="preview-contents">
+              <div class="left">
+                <p>
+                  Maecenas diam magna, volutpat in fermentum nec, rutrum sit amet massa. Fusce fermentum bibendum ipsum lacinia faucibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque pulvinar lorem sit amet eros rhoncus vehicula.
+                </p>
+                <img src="images/map.jpg" />
+              </div>
+              <div class="right">
+                <img src="images/map.jpg" />
+              </div>
+            </div>
+          </div>
+          <div id="property-preview-2" class="property-preview">
+            <img src="images/carousel/prop2-header.jpg" class="preview-header"/>
+            <div class="preview-contents">
+              <div class="left">
+                <p>
+                  Maecenas diam magna, volutpat in fermentum nec, rutrum sit amet massa. Fusce fermentum bibendum ipsum lacinia faucibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque pulvinar lorem sit amet eros rhoncus vehicula.
+                </p>
+              </div>
+              <div class="right">
+                <img src="images/map.jpg" />
+              </div>
+            </div>
+          </div>
+          <div id="property-preview-3" class="property-preview">
+            <img src="images/carousel/prop3-header.jpg" class="preview-header"/>
+            <div class="preview-contents">
+              <div class="left">
+                <p>
+                  Maecenas diam magna, volutpat in fermentum nec, rutrum sit amet massa. Fusce fermentum bibendum ipsum lacinia faucibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque pulvinar lorem sit amet eros rhoncus vehicula.
+                </p>
+              </div>
+              <div class="right">
+                <img src="images/map.jpg" />
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
