Set and position title.

--- a/src/index.html
+++ b/src/index.html
@@ -77,41 +77,43 @@
         <div class="flexbox">
           <div id="property-preview-1" class="property-preview">
             <img src="images/carousel/prop1-header.jpg" class="preview-header"/>
+            <div class="preview-title"><strong>123</strong> Garden Street</div>
             <div class="preview-contents">
               <div class="left">
-                <p>
+                <p class="preview-text">
                   Maecenas diam magna, volutpat in fermentum nec, rutrum sit amet massa. Fusce fermentum bibendum ipsum lacinia faucibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque pulvinar lorem sit amet eros rhoncus vehicula.
                 </p>
-                <img src="images/map.jpg" />
               </div>
               <div class="right">
-                <img src="images/map.jpg" />
+                <img src="images/map.jpg" class="preview-map"/>
               </div>
             </div>
           </div>
           <div id="property-preview-2" class="property-preview">
             <img src="images/carousel/prop2-header.jpg" class="preview-header"/>
+            <div class="preview-title"><strong>Playa</strong> Jeferrson</div>
             <div class="preview-contents">
               <div class="left">
-                <p>
+                <p class="preview-text">
                   Maecenas diam magna, volutpat in fermentum nec, rutrum sit amet massa. Fusce fermentum bibendum ipsum lacinia faucibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque pulvinar lorem sit amet eros rhoncus vehicula.
                 </p>
               </div>
               <div class="right">
-                <img src="images/map.jpg" />
+                <img src="images/map.jpg" class="preview-map"/>
               </div>
             </div>
           </div>
           <div id="property-preview-3" class="property-preview">
             <img src="images/carousel/prop3-header.jpg" class="preview-header"/>
+            <div class="preview-title"><strong>1275</strong> Minnesota Road</div>
             <div class="preview-contents">
               <div class="left">
-                <p>
+                <p class="preview-text">
                   Maecenas diam magna, volutpat in fermentum nec, rutrum sit amet massa. Fusce fermentum bibendum ipsum lacinia faucibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque pulvinar lorem sit amet eros rhoncus vehicula.
                 </p>
               </div>
               <div class="right">
-                <img src="images/map.jpg" />
+                <img src="images/map.jpg" class="preview-map"/>
               </div>
             </div>
           </div>
