Continue working on carousel.

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
               </div>
             </div>
           </div>
-          <div id="property-preview-2" class="property-preview">
+          <div id="property-preview-2" class="property-preview selected">
             <img src="images/carousel/prop2-header.jpg" class="preview-header"/>
             <div class="preview-title"><strong>Playa</strong> Jeferrson</div>
             <div class="preview-contents">
