Put our services learn more buttons in place.

--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,9 @@
                   <div class="medium-white-text"><strong>TENNANT</strong> REPRESENTATION</div>
                   <br />
                   Effective tenant representation is based on experience and knowledge and at GROUNDSOURCE we know more about Los Angeles than anyone else -- we know the market conditions, the infrastructures, comparable deals and the people who made them. This is our city.
+                  <br />
+                  <br />
+                  <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
                 </div>
               </div>
               <div class="landlord-rep">
@@ -138,6 +141,9 @@
                   <div class="medium-white-text"><strong>LANDLORD</strong> REPRESENTATION</div>
                   <br />
                   We provide efficient, effective landlord representation, ensuring that each transaction is hands-on, locally informed and detail-oriented. We know the value of a broker lies in our transparent integrity and commitment to a seamless experience.
+                  <br />
+                  <br />
+                  <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
                 </div>
               </div>
             </div>
