Begin contact us section.

--- a/src/index.html
+++ b/src/index.html
@@ -149,6 +149,9 @@
             </div>
           </div>
         </div>
+        <div id="contact-us">
+
+            </div>
       </div>
     </div>
 
