Finish up the contact-us section.

--- a/src/index.html
+++ b/src/index.html
@@ -150,8 +150,20 @@
           </div>
         </div>
         <div id="contact-us">
-
+          <div class="contact-content">
+            <div class="contact-header">
+              <strong>CONTACT</strong> US
             </div>
+            <div class="contact-body">
+              <ul>
+                <li><img src="images/phone-icon.png" class="icon-small"/>(888)555-4433</li>
+                <li><img src="images/email-icon.png" class="icon-small"/><a href="mailto:info@groundscource.com">info@groundsource.com</a></li>
+                <li><img src="images/location-icon.png" class="icon-small"/>1157 Highland Ave, Los Angeles, CA 90028</li>
+                <li><img src="images/ig-icon.png" class="icon-small"/><a href="https://www.instagram.com/groundsource">@groundsource</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
