Position arrows for property carousel.

--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,7 @@
             </div>
           </div>
           <div id="property-preview-2" class="property-preview selected">
+            <img src="images/listings-arrow-left.png" id="listings-arrow-left" class="listings-arrow"/>
             <img src="images/carousel/prop2-header.jpg" class="preview-header"/>
             <div class="preview-title"><strong>Playa</strong> Jeferrson</div>
             <div class="preview-contents">
@@ -102,6 +103,7 @@
                 <img src="images/map.jpg" class="preview-map"/>
               </div>
             </div>
+            <img src="images/listings-arrow-right.png" id="listings-arrow-right" class="listings-arrow"/>
           </div>
           <div id="property-preview-3" class="property-preview">
             <img src="images/carousel/prop3-header.jpg" class="preview-header"/>
