Change classname from container to flexbox.

--- a/src/about.html
+++ b/src/about.html
@@ -110,7 +110,7 @@
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
           </div>
         </div>
-        <div class="section-content container">
+        <div class="section-content flexbox">
           <div class="description">
             Groundsource specializes in various areas throughout the greater Los Angeles areas including but not limited to:
             <ul>
